"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-03-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-08:
	  hacprsim: added VCD trace file support.
		commands: vcd file, vcd-close, vcd-timescale
	  hflat vcd: added option to mangle/demangle unique IDs
		-f [no-]mangled-vcd-ids
	  Documented, basically tested.


2012-03-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-07:
	  hflat: new vcd emitter that just produces hierarchical
		VCD (trace-file) header, w/ global bool IDs
		that identify each unique node/wire in the hierarchy.
		Documented, tested.
		TODO: emit complete vcd traces in hacprsim.


2012-02-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-06:
	  HAC: added macro/function call 'defined' that takes a single
		scalar value reference, and returns a bool:
		true if arg is defined, else false.
		This allows users to default values if they are not 
		already defined.
		Looks like a function call, but is handled as a 
		special expression type (Object/expr/param_defined.h).
		Test cases added.


2012-02-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-05:
	  hacknet: new option named_port_connections that emits netlist
		instances with named port connections .port(local), 
		which eliminates port order dependence.  
		Added test cases.  Documented.


2012-02-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-04:
	  Actually propagate bool port direction information through
		middle-end, added a direction parameter to data_type_reference.
		Object binary version is bumped to 9.  
		Updated bool_connection_policy: fixed fanin/fanout direction
			of local '!' and '?' declarations.  
	  hacknet: verilog output now emits wire directions of ports.
	  haccreate-connect: