@@ -6,5 +6,4 @@ xyummy x b dummy<>
 xtummy b y dummy<>
 .ends
 
-xfools p q chain<>
 
